mi primera confirmación de actualización

--- a/about.html
+++ b/about.html
@@ -19,5 +19,6 @@
             <li>Servicio 3</li>
         </ul>
     </div>
+    <div class="greeting">Imágenes radiográficas</div>
 </body>
 </html>
